Added New Sidebar Header Images

--- a/css/app.css
+++ b/css/app.css
@@ -146,7 +146,7 @@ ul.msd{
 }
 
 #Selections{
-  background-image:url(../images/Selections.jpg);
+  background-image:url(../images/Selections1.jpg);
   background-repeat:repeat-x;
   background-attachment:scroll;
   background-position:left bottom;
@@ -162,7 +162,7 @@ ul.msd{
 }
 
 #Review{
-  background-image:url(../images/Review.jpg);
+  background-image:url(../images/Review1.jpg);
   background-repeat:repeat-x;
   background-attachment:scroll;
   background-position:left bottom;
@@ -174,7 +174,7 @@ ul.msd{
 }
 
 #Resources{
-  background-image:url(../images/select6.jpg);
+  background-image:url(../images/Resources1.jpg);
   background-repeat:repeat-x;
   background-attachment:scroll;
   background-position:left bottom;
@@ -186,7 +186,7 @@ ul.msd{
 }
 
 #Guides{
-  background-image:url(../images/Guides.jpg);
+  background-image:url(../images/Guides1.jpg);
   background-repeat:repeat-x;
   background-attachment:scroll;
   background-position:left bottom;
