--- a/css/app.css
+++ b/css/app.css
@@ -193,23 +193,30 @@ ul.msd a{
 }
 /*-------------------Grid----------*/
 .x-grid3-row-alt{
-	background-color:#faf9fb;
+	/* background-color:#faf9fb; */
+	background-color:#FBFAFB;
 }
 
 .x-grid3-row td{
   line-height:1.20;
 }
 
-.x-grid3-row-selected {
-	/*background-color:#E0E0EF !important;*/
-	background-image: none;
-  background: #E6E6F2 !important;
-  border:1px dotted #B9B5CF;
+.x-grid3-row-selected {	
+	ackground-image: none;
+  /*background: #E6E6F2 !important; */
+  background: #EAEAF3 !important;
+  /* border:1px dotted #B9B5CF; */
+  border:1px dotted #B3AFC8;
 }
 
 td.x-grid3-hd-over,td.sort-desc,td.sort-asc,td.x-grid3-hd-menu-open{
   border-left-color:#eee;
-  border-right-color:#d0d0d0;
+  /* border-right-color:#d0d0d0; */
+  border-right-color:#eee;
+}
+
+.x-grid-with-col-lines .x-grid3-row td.x-grid3-cell-last {  
+    border-right-color:#fcfcfc;
 }
 
 td.x-grid3-hd-over .x-grid3-hd-inner,td.sort-desc .x-grid3-hd-inner,td.sort-asc .x-grid3-hd-inner,td.x-grid3-hd-menu-open .x-grid3-hd-inner{
@@ -269,5 +276,5 @@ table.contactTable td.left{
 }
 
 #graphCont{
-  background-color: #fff;
+  padding: 0px 2px 0px 6px;
 }
